# hw27

./: db.sqlite3  pyproject.toml
ads/: models.py
ads/migrations/: 0001_initial.py
hw_27/: settings.py  urls.py
