[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["Maxim <99118327+Maximz2@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
